fixed alignment errors

--- a/src/views/AboutUs/DevelopersBoard/DevelopersBoard.css
+++ b/src/views/AboutUs/DevelopersBoard/DevelopersBoard.css
@@ -13,6 +13,11 @@
     justify-content: space-around;
 }
 
+.developer-types {
+    font-size: 25px;
+    text-align: center;
+}
+
 .developer-names {
     font-size: 20px;
     text-align: center;
